# terminal-game

./: README.md
Linux version - alpha/item_maker/: main.cpp
Linux version - alpha/modules/dialogue/: dialogue.hpp  talkplayer.hpp
Linux version - alpha/modules/quests/: control.cpp  quests.hpp
Linux version - alpha/modules/skills/: model.cpp
Linux version - alpha/modules/stats/: stats.cpp
Linux version - alpha/npc_maker/: CMakeLists.txt
Windows version - full (demo content)/game/: main.cpp
Windows version - full (demo content)/item_maker/: main.cpp
Windows version - full (demo content)/modules/group/: model.cpp
game/: CMakeLists.txt  comp  main.cpp
item_maker/: comp
linux - without dialogues/npc_maker/: comp
linux alpha version/item_maker/: CMakeLists.txt
modules/characters/npc/: model.cpp
modules/crafting/: crafting.hpp
modules/dialogue/: talkplayer.hpp
modules/group/: controler.cpp  group.hpp  view.cpp
modules/interpreter/: basic_interpreter.hpp
modules/inventory/: model.cpp  view.cpp
modules/item/: improver.cpp  item.hpp  model.cpp  view.cpp
modules/quests/: model.cpp  quests.hpp
modules/skills/: skills.hpp  view.cpp
modules/stats/: stats.cpp  stats.hpp
modules/trade/: control.cpp  model.cpp  trade.hpp
npc_maker/: CMakeLists.txt  main.cpp
npc_maker/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
window full demo version/game/: CMakeLists.txt
window full demo version/item_maker/: CMakeLists.txt  comp.bat
windows beta version/game/: CMakeLists.txt
windows beta version/npc_maker/: CMakeLists.txt  main.cpp
(+158 files in other folders)
